[package]
name = "pallet-asset-registry"
version = "1.1.10"
description = "Pallet for asset registry management"
authors = ["GalacticCouncil"]
edition = "2021"
homepage = "https://github.com/galacticcouncil/basilisk-node"
license = "Apache 2.0"
repository = "https://github.com/galacticcouncil/basilisk-node"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }

[dependencies]
codec = { default-features = false, features = ["derive", "max-encoded-len"], package = "parity-scale-codec", version = "2.3.1" }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
primitive-types = { default-features = false, version = "0.8.0" }
serde = { features = ["derive"], optional = true, version = "1.0.136" }

# Local dependencies
primitives = { path = "../../primitives", default-features = false }

# ORML dependencies
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", rev = "aac79b3b31953381669a2ffa9b3e9bfe48e87f38", default-features = false }

# Substrate dependencies
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false }

# HydraDX dependencies
hydradx-traits = { git = "https://github.com/galacticcouncil/warehouse", rev = "d0c99033c5d1f686a31cc311b8d96af2a3de9d76", default-features = false }

# Optionals
frame-system-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false, optional = true }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false, optional = true }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false, optional = true }

[dev-dependencies]
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false }
polkadot-xcm = { package = "xcm", git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.17", default-features = false }

[features]
default = ["std"]
runtime-benchmarks = [
  "frame-benchmarking",
  "frame-system/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
]
std = [
  "serde/std",
  "codec/std",
  "frame-support/std",
  "frame-system/std",
  "sp-runtime/std",
  "sp-core/std",
  "sp-std/std",
  "primitives/std",
  "hydradx-traits/std",
  "sp-api/std",
  "frame-benchmarking/std",
  "scale-info/std",
]
