[package]
authors = ['GalacticCouncil']
edition = '2018'
homepage = 'https://github.com/galacticcouncil/Basilisk-node'
license = 'Apache 2.0'
name = 'pallet-collator-selection'
repository = 'https://github.com/galacticcouncil/Basilisk-node'
version = '1.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
log = { version = "0.4.0", default-features = false }
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0' }
serde = { version = "1.0.119", default-features = false }
sp-std = { default-features = false,  git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.1"  }
sp-runtime = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.1"  }
sp-staking = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.1" }
frame-support = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.1" }
frame-system = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.1" }
pallet-authorship = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.1" }
pallet-session = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.1" }

frame-benchmarking = { default-features = false, optional = true, git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.1" }

[dev-dependencies]
sp-core = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.1" }
sp-io = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.1" }
sp-tracing = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.1"}
sp-runtime = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.1" }
pallet-timestamp = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.1" }
sp-consensus-aura = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.1" }
pallet-balances = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.1" }
pallet-aura = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.1" }

[features]
default = ['std']
runtime-benchmarks = [
	'frame-benchmarking',
	'frame-support/runtime-benchmarks',
	'frame-system/runtime-benchmarks',
]
std = [
	'codec/std',
	'log/std',
	'sp-runtime/std',
	'sp-staking/std',
	'sp-std/std',
	'frame-support/std',
	'frame-system/std',
	'frame-benchmarking/std',
	'pallet-authorship/std',
	'pallet-session/std',
]
