[package]
name = "pallet-exchange"
version = "5.2.1"
description = "Exchange Module"
authors = ["GalacticCouncil"]
edition = "2018"
homepage = "https://github.com/galacticcouncil/basilisk-node"
license = "Apache 2.0"
repository = "https://github.com/galacticcouncil/basilisk-node"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }

[dependencies]
codec = { default-features = false, features = ["derive"], package = "parity-scale-codec", version = "2.3.1" }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
primitive-types = { default-features = false, version = "0.8.0" }
serde = { features = ["derive"], optional = true, version = "1.0.101" }

# Local dependencies
pallet-xyk = { path = "../xyk", default-features = false }
pallet-asset-registry = { path = "../asset-registry", default-features = false }
primitives = { path = "../../primitives", default-features = false }

# ORML dependencies
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", rev = "ee37b76a7a8cf159e6c41851942758746318bb84", default-features = false }
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", rev = "ee37b76a7a8cf159e6c41851942758746318bb84", default-features = false }

# HydraDX dependencies
hydradx-traits = { git = "https://github.com/galacticcouncil/warehouse", rev="a395fe6cfcf4d2d66fb89c8397beee182c5754f6", default-features = false }

# Substrate dependencies
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", default-features = false }

sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", default-features = false }

[dev-dependencies]
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", default-features = false }

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "sp-std/std",
    "sp-runtime/std",
    "primitives/std",
    "hydradx-traits/std",
    "orml-tokens/std",
    "orml-traits/std",
    "pallet-xyk/std",
    "pallet-asset-registry/std",
    "scale-info/std",
]
