[package]
name = "pallet-exchange"
version = "5.3.9"
description = "Exchange Module"
authors = ["GalacticCouncil"]
edition = "2021"
homepage = "https://github.com/galacticcouncil/basilisk-node"
license = "Apache 2.0"
repository = "https://github.com/galacticcouncil/basilisk-node"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }

[dependencies]
codec = { default-features = false, features = ["derive"], package = "parity-scale-codec", version = "3.0.0" }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
primitive-types = { default-features = false, version = "0.11.1" }
serde = { features = ["derive"], optional = true, version = "1.0.136" }

# Local dependencies
pallet-xyk = { path = "../xyk", default-features = false }
primitives = { path = "../../primitives", default-features = false }

# ORML dependencies
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", rev = "8c625a5ab43c1c56cdeed5f8d814a891566d4cf8", default-features = false }
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", rev = "8c625a5ab43c1c56cdeed5f8d814a891566d4cf8", default-features = false }

# HydraDX dependencies
pallet-asset-registry = { git = "https://github.com/galacticcouncil/warehouse", rev = "8895cdf9f320bf544606e94b8fb0dcfd10b00345", default-features = false }
hydradx-traits = { git = "https://github.com/galacticcouncil/warehouse", rev = "8895cdf9f320bf544606e94b8fb0dcfd10b00345", default-features = false }
hydra-dx-math = { git = "https://github.com/galacticcouncil/HydraDX-math", rev = "1cd815cbce846a42d351db3778ff9c07149a6ad2", default-features = false }

# Substrate dependencies
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false }

sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false }

[dev-dependencies]
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false }

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "sp-std/std",
    "sp-runtime/std",
    "primitives/std",
    "hydradx-traits/std",
    "orml-tokens/std",
    "orml-traits/std",
    "pallet-xyk/std",
    "pallet-asset-registry/std",
    "scale-info/std",
]
