[package]
authors = ['GalacticCouncil']
description = 'Incentives Pallet'
edition = '2018'
homepage = 'https://github.com/galacticcouncil/basilisk-node'
license = 'Apache 2.0'
name = 'pallet-incentives'
repository = 'https://github.com/galacticcouncil/basilisk-node'
version = '0.1.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-wasm-builder = {package = 'substrate-wasm-builder', version = '3.0.0'}

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
serde = {features = ['derive'], optional = true, version = '1.0.101'}
primitive-types = {default-features = false, version = '0.8.0'}
sp-runtime = {default-features = false, version = '3.0.0'}

# Local dependencies
primitives = {path = '../../primitives', default-features = false}

# Substrate dependencies
frame-benchmarking = {default-features = false, optional = true, version = '3.0.0'}
frame-support = {default-features = false, version = '3.0.0'}
frame-system = {default-features = false, version = '3.0.0'}
frame-system-benchmarking = {default-features = false, optional = true, version = '3.0.0'}
sp-std = {default-features = false, version = '3.0.0'}

[dev-dependencies]
sp-core = {default-features = false, version = '3.0.0'}

[features]
default = ['std']
runtime-benchmarks = [
  "frame-benchmarking",
  "frame-system/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
]

std = [
  'serde',
  'codec/std',
  'frame-support/std',
  'frame-system/std',
  'sp-std/std',
  'primitives/std',
  'sp-runtime/std',
]
