[package]
name = "pallet-lbp"
version = "4.6.9"
description = "HydraDX Liquidity Bootstrapping Pool Pallet"
authors = ["GalacticCouncil"]
edition = "2021"
homepage = "https://github.com/galacticcouncil/Basilisk-node"
license = "Apache 2.0"
repository = "https://github.com/galacticcouncil/Basilisk-node"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }

[dependencies]
codec = { default-features = false, features = ["derive"], package = "parity-scale-codec", version = "3.1.5" }
scale-info = { version = "2.3.1", default-features = false, features = ["derive"] }
primitive-types = { default-features = false, version = "0.12.0" }
serde = { features = ["derive"], optional = true, version = "1.0.136" }

# Warehouse dependencies
hydradx-traits = { git = "https://github.com/galacticcouncil/warehouse", rev = "474064eba4671e31f94d4334f62eb4789be13587", default-features = false }

hydra-dx-math = { git = "https://github.com/galacticcouncil/HydraDX-math", rev = "d11c3da92ac4eb9b503f5e7e8e3710962948ef84", default-features = false }

## Local dependencies
primitives = { default-features = false, path = "../../primitives" }

## ORML dependencies
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v0.9.37", default-features = false }

## Substrate dependencies
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false, optional = true }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
frame-system-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false, optional = true }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }

# Needed for benchmarks
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v0.9.37", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }

[dev-dependencies]
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
test-utils = {git = "https://github.com/galacticcouncil/warehouse", rev = "474064eba4671e31f94d4334f62eb4789be13587", default-features = false}

[features]
default = ["std"]
runtime-benchmarks = [
    "frame-benchmarking",
    "frame-system/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
]
std = [
    "serde",
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "orml-tokens/std",
    "orml-traits/std",
    "sp-runtime/std",
    "sp-core/std",
    "sp-std/std",
    "primitives/std",
    "hydradx-traits/std",
    "scale-info/std",
]
try-runtime = ["frame-support/try-runtime"]
