[package]
name = "pallet-lbp"
version = "4.6.13"
description = "HydraDX Liquidity Bootstrapping Pool Pallet"
authors = ["GalacticCouncil"]
edition = "2021"
homepage = "https://github.com/galacticcouncil/Basilisk-node"
license = "Apache 2.0"
repository = "https://github.com/galacticcouncil/Basilisk-node"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-wasm-builder = { workspace = true }

[dependencies]
codec = { default-features = false, features = ["derive"], package = "parity-scale-codec", version = "3.4.0" }
scale-info = { version = "2.3.1", default-features = false, features = ["derive"] }
primitive-types = { workspace = true }
serde = { features = ["derive"], optional = true, version = "1.0.136" }

# HydraDX dependencies
hydra-dx-math = { workspace = true }
hydradx-traits = { workspace = true }

## Local dependencies
primitives = { default-features = false, path = "../../primitives" }

## ORML dependencies
orml-traits = { workspace = true }

## Substrate dependencies
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-std = { workspace = true }

# Needed for benchmarks
orml-tokens = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }

[dev-dependencies]
sp-io = { workspace = true }
test-utils = { workspace = true }

[features]
default = ["std"]
runtime-benchmarks = [
    "frame-benchmarking",
    "frame-system/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
]
std = [
    "serde",
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "orml-tokens/std",
    "orml-traits/std",
    "sp-runtime/std",
    "sp-core/std",
    "sp-std/std",
    "primitives/std",
    "hydradx-traits/std",
    "scale-info/std",
]
try-runtime = ["frame-support/try-runtime"]
